tests/semantic/type_system14/type_system14.err
Error: Atoms argument type is not a subtype of its declared type in file type_system14.dl at line 24
RG(val) :- RD(val), RE(cat("",val)).
---^---------------------------------
The argument declared type is B in file type_system14.dl at line 21
.decl RG(x:B)
-----------^--
1 errors generated, evaluation aborted
